<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="feature_item_brand">Brand</string>
    <string name="feature_item_season">Season</string>
    <string name="feature_item_size">Size</string>

    <string name="feature_item_capsule">Capsules</string>
    <string name="feature_item_looks_with_whis_item">Loooks with this capsule</string>
    <string name="feature_item_create_advert">Create advert</string>

    <string name="feature_item_season_summer">Summer</string>
    <string name="feature_item_season_winter">Winter</string>
    <string name="feature_item_season_demiseason">Demiseason</string>

</resources>